Fixed Card and global contentSpacing styles

--- a/styles/layout/global.scss
+++ b/styles/layout/global.scss
@@ -35,7 +35,6 @@ h6 {
 	margin: 0 0 1rem 0;
 	font-weight: $bold;
 	color: $black;
-	line-height: 1.2;
 	font-family: $fonts_headers;
 }
 
