--- a/styles/settings/mixins.scss
+++ b/styles/settings/mixins.scss
@@ -66,7 +66,7 @@
 			margin-top: 7rem;
 		}
 		@include laptop-m {
-			margin-top: 15rem;
+			margin-top: 10rem;
 		}
 	}
 
